@@ -18,6 +18,7 @@ setHeaders      = false
 
 [ContentTypeMgr]
 requiresAuth    = true
+adminGuiAllowed = true
 totalFields     = 10
 
 [WikiScrapeMgr]
