@@ -1,0 +1,94 @@
+<div id="content">
+    <div id="content-header">
+        <h2>{translate(pageTitle)}</h2>
+        <div class="message">{msgGet()}</div>
+    </div>
+    <form name="addType" method="post" flexy:ignore>
+        <fieldset class="hide">
+            <input type="hidden" name="action" value="add" />
+        </fieldset>
+        <fieldset class="noBorder">
+            <table class="full">
+                <tr>
+                    <th colspan="3">{translate(#Add New Content Type#)}</th>        
+                </tr>
+                <tr>
+                    <td>* {translate(#Name#)}: <input type="text" name="type[item_type_name]" /></td>
+                    <td>with <select name="type[fields]" />                        
+                             {foreach:totalFields,num}
+                                    <option value="{num}">{num}</option>
+                             {end:}
+                                </select>
+                    </td>        
+                    <td>
+                        <input class="sgl-button" name="submitted" value="{translate(#Submit#)}" type="submit" />
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="top" colspan="3">
+                        <span class="error">*</span> 
+                        <span>{translate(#denotes required field#)}</span>
+                    </td>
+                </tr>    
+            </table>
+        </fieldset>
+    </form>
+
+    {if:aPagedData[data]}
+    <form name="deleteContentType" flexy:ignore id="deleteContentType">
+        <fieldset class="hide">
+            <input type="hidden" name="action" value="delete" />
+        </fieldset>
+        <fieldset class="noBorder">
+            <table class="full">
+                <thead>
+                    <tr class="infos">
+                        <td class="right" colspan="4">
+                        {if:pager}<flexy:include src="admin_pager_table.html" />{end:}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th width="3%">
+                            <span class="tipOwner">
+                                <span class="tipText" id="becareful">Be Careful !</span>
+                                <input type="checkbox" name="checkAll" id="checkAll" onclick="javascript:applyToAllCheckboxes('deleteContentType', 'frmDelete[]', this.checked)" />
+                            </span>
+                        </th>
+                        <th>{translate(#ID#)}</th>
+                        <th class="left">{translate(#Name#)}</th>
+                        <th>{translate(#Edit#)}</th>
+                    </tr>
+                </thead>
+                <tr class="{switchRowClass()}" flexy:foreach="aPagedData[data],key,aValue">
+                    <td><input class="noBorder" type="checkbox" name="frmDelete[]" value="{aValue[item_type_id]}" /></td>
+                    <td>{aValue[item_type_id]}</td>
+                    <td class="left">{aValue[item_type_name]} </td>
+
+                    <td>
+                        <input class="sgl-button" type="button" onclick="javascript:document.location.href='{makeUrl(#edit#,#contentType#,#publisher#,aPagedData[data],#frmContentTypeID|item_type_id#,key)}'" value="{translate(#Edit#)}" />
+                    </td>
+                </tr>
+                {if:aPagedData[data]}
+                <tfoot>
+                    <tr class="infos">
+                        <td class="right" colspan="4">
+                        {if:pager}<flexy:include src="admin_pager_table.html" />{end:}
+                        </td>
+                    </tr>
+                </tfoot>
+                {end:}            
+                <tr>
+                    <td colspan="4" class="left">
+                    {translate(#With selected content type(s)#)}: 
+                    <input class="sgl-button" type="submit" name="deleteButton" value="{translate(#delete#)}" 
+                        onClick="return confirmSubmit('{translate(#content type#)}', 'itemType')" />
+                    </td>
+                </tr>        
+            </table>
+        </fieldset>
+    </form>
+    {else:}
+    <span>{translate(#no results found#)}</span>
+    {end:}
+    <div class="spacer"></div>
+</div>
