@@ -1,34 +1,0 @@
-<div class="message">{msgGet()}</div>
-<h1 class="pageTitle">{translate(pageTitle)} :: {translate(action)}</h1>
-
-<form name="addType" method="post" flexy:ignore>
-<input type="hidden" name="action" value="insert" />
-<input type="hidden" name="type[item_type_name]" value="{type[item_type_name]}" />
-
-<table class="wide">
-    <tr>
-        <th colspan="2">
-        <div class="error" flexy:if="error[name]">
-            {error}
-        </div>        
-        * Name: <input type="text" name="type[item_type_name]" value="{type[item_type_name]}" /></th>
-    </tr>          
-    <tr flexy:foreach="totalFields,key">
-        <td><input type="text" name="type[field_name][{key}]" /></td>
-        <td><select name="type[field_type][{key}]">
-            {generateSelect(fieldTypes):h}</select>
-        </td>
-    </tr>
-    <tr>
-        <td><input class="wideButton" name="submitted" value="{translate(#Submit#)}" type="submit" /></td>
-        <td><input class="wideButton" type="button" value="{translate(#Cancel#)}" 
-                onclick="javascript:document.location.href='{makeUrl(##,#contentType#,#publisher#)}'" /></td>
-    </tr>
-    <tr>
-        <td valign="top" colspan="2">
-            <span class="error">*</span> 
-            <span>{translate(#denotes required field#)}</span>
-        </td>
-    </tr>    
-</table>
-</form>
