@@ -1,92 +1,0 @@
-<script type='text/javascript'>
-<!--
-    function checkNewButton()
-    {
-        var buttValue = self.document.newArticle.frmDataTypeID.value;
-        if (buttValue == 1)
-            self.document.newArticle.newArticleButton.disabled = true;
-    }
-
-    function exp(strTag, strAttribute)
-    { 
-        var elem = document.getElementsByTagName(strTag); 
-        var elem1 = window.event.srcElement; 
-        for (var i=0;i<elem1.children.length;i++){ 
-          elem1.children[i].innerText=="4"?elem1.children[i].innerText="5":elem1.children[i].innerText="4"; 
-        } 
-        for (var i =0;i<elem.length;i++) { 
-            if (elem[i].getAttribute(strAttribute)=="yes") { 
-                elem[i].style.display=='none'? elem[i].style.display='block':elem[i].style.display='none'; 
-            } 
-        } 
-    }
-//-->
-</script> 
-<flexy:include src="publisherSubNav.html" />
-<div class="message">{msgGet()}</div>
-
-{if:aPagedData[links]}<flexy:include src="pager.html" />{end:}
-
-<form name="addType" method="post" flexy:ignore>
-<input type="hidden" name="action" value="add" />
-<table class="wide">
-    <tr>
-        <th colspan="3">{translate(#Add Type#)}</th>        
-    </tr>
-    <tr>
-        <td>* {translate(#Name#)}: <input type="text" name="type[item_type_name]" /></td>
-        <td>with <select name="type[fields]" />                        
-                 {foreach:totalFields,num}
-                        <option value="{num}">{num}</option>
-                 {end:}
-                    </select>
-        </td>        
-        <td><input class="wideButton" name="submitted" value="{translate(#Submit#)}" type="submit" /></td>
-    </tr>
-    <tr>
-        <td valign="top" colspan="3">
-            <span class="error">*</span> 
-            <span>{translate(#denotes required field#)}</span>
-        </td>
-    </tr>    
-</table>
-</form>
-
-{if:aPagedData[data]}
-<form name="itemType" flexy:ignore>
-<input type="hidden" name="action" value="delete" />
-<table class="wide">
-    <tr class="{switchRowClass()}" flexy:foreach="aPagedData[data],key,aValue">
-        <td><input class="noBorder" type="checkbox" name="frmDelete[]" value="{key}" /></td>
-        <td>
-            {translate(#Name#)}: {aValue[item_type_name]} <br />
-            <a href="{makeUrl(#edit#,#contentType#,#publisher#,aPagedData[data],#frmContentTypeID|item_type_id#,key)}" title="{translate(#Edit#)}">
-                <img src="{webRoot}/themes/{theme}/images/edit.gif" alt="edit" />
-            </a>
-        </td>
-        <td>
-            <table class="wide">
-                <tr class="{switchRowClass()}" flexy:foreach="aValue[fields],itemTypeMappingId">
-                    {foreach:itemTypeMappingId,fieldName,fieldValue}            
-                    <td>{fieldName}</td>
-                    <td>{fieldValue}</td>
-                    {end:}
-                </tr>
-            </table>
-        </td>
-    </tr>
-
-    <tr>
-        <td colspan="4">
-        {translate(#With selected content type(s)#)}: 
-        <input type="submit" name="deleteButton" value="{translate(#delete#)}" 
-            onClick="return confirmSubmit('{translate(#content type#)}', 'itemType')" />
-        </td>
-    </tr>        
-</table>
-</form>
-{else:}
-<span>{translate(#no results found#)}</span>
-{end:}
-    
-{if:aPagedData[links]}<flexy:include src="pager.html" />{end:}
